2007-05-08  Zeeshan Ali  <zeenix@gstreamer.net>
 
 	* tools/gssdp-device-sniffer.c: (clear_packet_treeview),
 	(packet_header_to_string), (clear_textbuffer),
 	(update_packet_details), (display_packet), (on_packet_selected),
 	(on_clear_packet_capture_activate), (packet_to_treeview_data),
 	(append_packet), (on_ssdp_message), (create_model),
 	(setup_treeviews), (init_upnp):
 	
 	- Implement packet details viewing.
 	- Browsing passively.
 	- Rename on_gssdp_message to on_ssdp_message
 	- Implement clearing of packet info treeview and textview.
 	- Rename clear_packet_capture1 to clear_packet_capture
 
 	* tools/gssdp-device-sniffer.glade:
 	
 	Rename clear_packet_capture1 to clear_packet_capture
 
2007-05-08  Zeeshan Ali  <zeenix@gstreamer.net>

	* libgssdp/gssdp-client.c: (socket_source_cb):

	Unref the table instead of destroying it.

2007-05-07  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c: (received_discovery_response):

	Handle standard-uncompliant replies to "ssdp:all" discovery requests 
	gracefully.

2007-05-07  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c: (resource_available):

	Allow spaces when parsing Cache-Control.

2007-05-04  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-protocol.h:
	* libgssdp/gssdp-resource-browser.c: (received_announcement):
	* libgssdp/gssdp-resource-browser.h:
	* libgssdp/gssdp-resource-group.c: (message_received_cb):
	* tests/test-browser.c: (main):
	* tools/gssdp-device-sniffer.c: (init_upnp):

	Define GSSDP_ALL_RESOURCES in gupnp-resource-browser.h.

2007-05-04  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c: (received_announcement):
	* libgssdp/gssdp-resource-group.c: (message_received_cb),
	(discovery_response_timeout), (discovery_response_free):

	More "ssdp:all" work - should be all good now.

2007-05-04  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-protocol.h:
	* libgssdp/gssdp-resource-group.c: (message_received_cb):